# aieBootstrap

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
bootstrap/: Makefile  cmake_install.cmake
nnp/: CMakeLists.txt  Controller.cpp  Makefile  Minesweeper.cpp  MinesweeperController.cpp  NeuralNetwork.cpp  NeuralNetworkProjectApp.cpp  PatternRecognitionController.cpp  XORController.cpp  cmake_install.cmake  main.cpp
nnp/inc/: Controller.h  Minesweeper.h  MinesweeperController.h  NeuralNetwork.h  NeuralNetworkProjectApp.h  PatternRecognitionController.h  XORController.h
nnp/src/: Controller.cpp  Minesweeper.cpp  MinesweeperController.cpp  NeuralNetwork.cpp  NeuralNetworkProjectApp.cpp  main.cpp
project2D/: Makefile  cmake_install.cmake  project2D
project3D/: Makefile  cmake_install.cmake  project3D
